--- a/brew_crew/.gitignore
+++ b/brew_crew/.gitignore
@@ -14,6 +14,7 @@
 *.ipr
 *.iws
 .idea/
+../.vscode
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
@@ -63,6 +64,7 @@
 **/ios/Flutter/flutter_assets/
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/build
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
