--- a/brew_crew/ios/Runner/Info.plist
+++ b/brew_crew/ios/Runner/Info.plist
@@ -41,5 +41,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>We need to have access to your camera to pick an avatar</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need to have access to your microphone to pick an avatar</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need to have access to your camera to pick an avatar</string>
 </dict>
 </plist>
